includedir = $(prefix)/include/unisim/service/interfaces
include_HEADERS = time.hh logger.hh symbol.hh symbol_table_lookup.hh symbol_table_build.hh

INCLUDES=-I$(top_srcdir)/../../..
libdir = $(prefix)/lib/unisim/service/interfaces
lib_LIBRARIES = libinterfaces.a
libinterfaces_a_SOURCES = logger.cc
